[package]
name = "acter-tui"
description = "The Acter Terminal User Interface"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
homepage = "https://effekto.org"
repository = "https://github.com/acterglobal/a3"
license-file = "../../LICENSE.txt"

[dependencies]
anyhow = "*"
app_dirs2 = "2.5.5"
clap = { version = "*", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
crossterm = "*"
dialoguer = { workspace = true }
env_logger = { workspace = true }
futures = "*"
mime = "*"
tokio = { version = "*", features = ["full", "time"] }
tracing = { version = "*", features = ["log"] }
tui = "0.19.0"
tui-logger = "0.9.6"
matrix-sdk-base = { workspace = true }

[dependencies.acter-core]
path = "../core"

[dependencies.acter]
path = "../acter"
default-features = false
