[package]
name = "mr_minutes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.17.2"
clap = { version = "4.3.15", features = ["derive"]}
anyhow = "1.0.71"
log = "0.4.19"
env_logger = "0.10.0"