[package]
name = "mr_minutes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.1"
clap = { version = "*", features = ["derive"] }
anyhow = "*"
log = "*"
env_logger = { workspace = true }
